--- a/SanjaysBookStore/Views/Category/Index.cshtml
+++ b/SanjaysBookStore/Views/Category/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <br />
 <div class="row">
@@ -23,3 +25,5 @@
         </thead>
     </table>
 </div>
+
+
