added the create, delete and back to list function

--- a/SanjaysBookStore/Views/Shared/_Layout.cshtml
+++ b/SanjaysBookStore/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-white-50 bg-primary">
         <div class="container">
             &copy; 2022 - SanjaysBookStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
