--- a/SanjaysBookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/SanjaysBookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    
+
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,7 +10,7 @@
         <h2 class="text-primary">Category List </h2>
     </div>
     <div class="col-6 text-right">
-        <a class="btn btn-primary"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
+        <a class="btn btn-primary" asp-action="Upsert"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
     </div>
 </div>
 
@@ -27,3 +27,8 @@
 </div>
 
 
+
+
+@section scripts{
+<partial name="_ValidationScriptsPartial"/>
+}
