--- a/SanjaysBookStore/Areas/Admin/Views/CoverType/Upsert.cshtml
+++ b/SanjaysBookStore/Areas/Admin/Views/CoverType/Upsert.cshtml
@@ -1,20 +1,14 @@
 ﻿@model SanjayBooks.Models.CoverType;
 
-@{
-
-    Layout = "~/Views/Shared/_Layout.cshtml";
-    var title = "Create Category";
-}
-
+@{ Layout = "~/Views/Shared/_Layout.cshtml";
+    var title = "create CoverType"; }
 <form method="post">
-    <div class="row p-3 border">
-        <div asp-validation-summary="ModelOnly" class="text-danger">
 
-        </div>
+    <div class="row p-3 border">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @if (Model.Id != 0)
-        {
-            //edit
-            title = "Edit Category";
+        { //edit
+            title = "Edit CoverType";
         }
         <div class="col-12 border-bottom">
             <h2 class="text-primary">@title</h2>
@@ -25,7 +19,7 @@
                     <label asp-for="Name"></label>
                 </div>
                 <div class="col-8">
-                    <label asp-for="Name" class="form-control" />
+                    <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
@@ -33,19 +27,15 @@
                 <div class="col-8 offset-4">
                     @if (Model.Id != 0)
                     {
-                        <partial name="_EditAndBackToListButton" model="Model.Id" />
-                    }
-                    else
-                    {
-                        <partial name="_CreateAndBackToListButton" />
-                    }
+        <partial name="_EditAndBackToListButton" model="Model.Id" /> }
+    else
+    {
+<partial name="_CreateAndBackToListButton" />}
                 </div>
             </div>
         </div>
     </div>
 </form>
-
 @section Scripts{
-    <​partial​ ​name​ =​"​_ValidationScriptsPartial​"​  />
+    <partial name="_ValidationScriptsPartial" />
 }
-
