--- a/SanjaysBookStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/SanjaysBookStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model SanjayBooks.Models.CoverType;
+﻿@model SanjayBooks.Models.Category;
 
 @{
 
@@ -25,7 +25,7 @@
                     <label asp-for="Name"></label>
                 </div>
                 <div class="col-8">
-                    <label asp-for="Name" class="form-control" />
+                    <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
@@ -46,6 +46,6 @@
 </form>
 
 @section Scripts{
-    <​partial​ ​name​ =​"​_ValidationScriptsPartial​"​  />
+    <​partial​ ​name​ =​"_ValidateionScriptsPartial​"​  />
 }
 
